# aoc2024

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: docs.yml  rust.yml
crates/alldays/: Cargo.toml
crates/alldays/src/: main.rs
crates/aoc/: Cargo.toml
crates/aoc/src/: geom.rs  grid.rs  lib.rs  macros.rs  maximal_cliques.rs  par.rs  problems.rs
crates/getdata/: Cargo.toml
crates/getdata/src/: lib.rs  main.rs
crates/newday/: Cargo.toml
crates/newday/src/: main.rs  template.rs.in
crates/python_2024/: Cargo.toml  README.md
crates/python_2024/src/: lib.rs
crates/wasm_2024/: Cargo.toml  index.html
crates/wasm_2024/src/: lib.rs
crates/year_2024/: Cargo.toml
crates/year_2024/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs  main.rs
python/: 05.py  11.py  problems.py
python/2024/: 05.py  11.py  problems.py
samples/2024/: 21-a.txt
src/: geom.rs  grid.rs  lib.rs  macros.rs  par.rs  problems.rs
