[package]
name = "aoc2024"
version.workspace = true
edition.workspace = true
publish = false
rust-version = "1.82"

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
aoc-parse = "0.2.18"
cached = "0.54.0"
clap = { version = "4.5.22", features = ["derive"] }
counter = "0.6.0"
derive-new = { version = "0.7.0", default-features = false }
derive_more = { version = "1.0.0", features = ["add", "from", "mul", "try_from"] }
grid = "0.15.0"
inline_colorization = "0.1.6"
itertools = "0.13.0"
num = { version = "0.4.3", default-features = false }
paste = "1.0.15"
petgraph = { version = "0.6.5", default-features = false, features = ["graphmap"] }
regex = { version = "1.11.1", default-features = false }
seq-macro = "0.3.5"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.8"

getdata = { path = "crates/getdata" }
aoc2024 = { path = "."}

[dependencies]
clap.workspace = true
derive-new.workspace = true
derive_more.workspace = true
grid.workspace = true
inline_colorization.workspace = true
num.workspace = true
paste.workspace = true
rayon = { version = "1.10.0", optional = true}
strum.workspace = true

[features]
default = ["par"]
par = ["dep:rayon"]

[lints]
workspace = true

[lib]
doctest = false

[profile.release]
debug = 1