[package]
name = "aoc"
edition.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
derive-new.workspace = true
derive_more.workspace = true
grid.workspace = true
inline_colorization.workspace = true
num.workspace = true
paste.workspace = true
petgraph.workspace = true
rayon = { version = "1.10.0", optional = true}
strum.workspace = true

[features]
default = ["par"]
par = ["dep:rayon"]

[lints]
workspace = true

[lib]
doctest = false
