[package]
name = "newday"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["env"] }
derive-new.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
tinytemplate = "1.2.1"
getdata.workspace = true
thiserror.workspace = true
