[package]
name = "python_2024"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
paste.workspace = true
pyo3 = { version = "0.29.0", features = ["abi3-py39"]}
seq-macro.workspace = true
year_2024.workspace = true

[lints]
workspace = true

[lib]
name = "aoc2024"
crate-type = ["cdylib"]