[package]
name = "wasm_2024"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
wasm-bindgen = "0.2.99"
year_2024.workspace = true
seq-macro.workspace = true
paste.workspace = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lints]
workspace = true

[lib]
doctest = false
crate-type = ["cdylib"]

