[package]
name = "year_2024"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
aoc-parse.workspace = true
aoc = {workspace = true, default-features = false}
cached.workspace = true
clap.workspace = true
counter.workspace = true
derive-new.workspace = true
derive_more.workspace = true
grid.workspace = true
inline_colorization.workspace = true
itertools.workspace = true
paste.workspace = true
petgraph.workspace = true
regex.workspace = true
seq-macro.workspace = true
strum.workspace = true

[lints]
workspace = true

[features]
default = ["par"]
par = ["aoc/par"]

[lib]
doctest = false

[[bin]]
name = "year_2024"
test = false
